@@ -9,6 +9,11 @@ by a '#' or a '*' or a '?'. A
   '#' denotes a change which is noticeable by the user.
   '?' describes a known problem which is not fixed yet.
 
+%%%%%%%%%%%%%%%%%%% GV 3.6.6.92 (March 2009) %%%%%%%%%%%%%%%%%%%%%%%%
+
+# Fixed debian bug #516995: Misleading error message when .gv file is not
+present [and XUSERFILESEARCHPATH is used]
+
 %%%%%%%%%%%%%%%%%%% GV 3.6.6.91 (February 2009) %%%%%%%%%%%%%%%%%%%%%%%%
 
 # Fixed a bug in switching to presentation mode.
