@@ -1,3 +1,15 @@
+2009-03-01  Markus Steinborn <gnugv_maintainer@yahoo.de>
+
+	* doc/gv-update-userconfig.1: Filename as optional argument
+
+	* src/gv-update-userconfig.in: Filename as optional argument
+	
+	* src/resource.c (resource_buildDatabase): Update newly introduced
+	variable haveXUSERFILESEARCHPATH and resource_user_file_symb
+	
+	* src/resource.c (resource_checkResources): Corrected error message in
+	case XUSERFILESEARCHPATH is used.
+
 2009-02-10  Markus Steinborn <gnugv_maintainer@yahoo.de>
 
 	* src/FileSel.c (TopDirSelectionProc, SubDirSelectionProc):
